committed by Preslyn

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Preslyn\AppData\Local\Temp\testng-eclipse-997722815\testng-customsuite.xml</span>
+                    <span>C:\Users\Preslyn\AppData\Local\Temp\testng-eclipse-1330968363\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="resigistration.MavenTest1" class="method navigator-link" hash-for-method="enter_the_Username_and_Password">enter_the_Username_and_Password</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="resigistration.MavenTest1" class="method navigator-link" hash-for-method="test_compose_button">test_compose_button</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -125,9 +125,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="enter_the_Username_and_Password">
-                  </a> <!-- enter_the_Username_and_Password -->
-                  <span class="method-name">enter_the_Username_and_Password</span>
+                  <a name="test_compose_button">
+                  </a> <!-- test_compose_button -->
+                  <span class="method-name">test_compose_button</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Preslyn\AppData\Local\Temp\testng-eclipse-997722815\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Preslyn\AppData\Local\Temp\testng-eclipse-1330968363\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -186,14 +186,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'enter_the_Username_and_Password')
+data.setCell(0, 1, 'test_compose_button')
 data.setCell(0, 2, 'resigistration.MavenTest1')
-data.setCell(0, 3, 6723);
+data.setCell(0, 3, 36401);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 36 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -225,12 +225,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">enter_the_Username_and_Password</span>
-                <span class="method-start">5033 ms</span>
+                <span class="method-name">test_compose_button</span>
+                <span class="method-start">4925 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">11763 ms</span>
+                <span class="method-start">41353 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
