--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d2d9cb">  <td>21/05/16 13:36:32</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;MavenTest1.closeBrowser()[pri:0, instance:resigistration.MavenTest1@60fa3495]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1818449913</td>   <td></td> </tr>
-<tr bgcolor="d2d9cb">  <td>21/05/16 13:36:25</td>   <td>-6729</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MavenTest1.enter_the_Username_and_Password()[pri:0, instance:resigistration.MavenTest1@60fa3495]">enter_the_Username_and_Password</td> 
-  <td>main@1818449913</td>   <td></td> </tr>
-<tr bgcolor="d2d9cb">  <td>21/05/16 13:36:20</td>   <td>-11739</td> <td>&nbsp;</td><td title="&gt;&gt;MavenTest1.open_the_Chrome_and_login_to_Gmail_account()[pri:0, instance:resigistration.MavenTest1@60fa3495]">&gt;&gt;open_the_Chrome_and_login_to_Gmail_account</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1818449913</td>   <td></td> </tr>
+<tr bgcolor="d2d9cb">  <td>21/05/16 15:40:54</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;MavenTest1.closeBrowser()[pri:0, instance:resigistration.MavenTest1@6a62689d]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1264941544</td>   <td></td> </tr>
+<tr bgcolor="d2d9cb">  <td>21/05/16 15:40:12</td>   <td>-41341</td> <td>&nbsp;</td><td title="&gt;&gt;MavenTest1.open_the_Chrome_and_login_to_Gmail_account()[pri:0, instance:resigistration.MavenTest1@6a62689d]">&gt;&gt;open_the_Chrome_and_login_to_Gmail_account</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1264941544</td>   <td></td> </tr>
+<tr bgcolor="d2d9cb">  <td>21/05/16 15:40:17</td>   <td>-36429</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MavenTest1.test_compose_button()[pri:0, instance:resigistration.MavenTest1@6a62689d]">test_compose_button</td> 
+  <td>main@1264941544</td>   <td></td> </tr>
 </table>
